get gulp watch actually watching
* added live reload to connect, not exactly using it yet

--- a/demo/index.html
+++ b/demo/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div ng-controller="MainController">
-            <h1>{{ message }}</h1>
+            <h1>dd {{ message }}</h1>
         </div>
         <script type="application/javascript" src="/js/main.js"></script>
     </body>
