angular directives rendering (for the most part)
* got templates working

--- a/demo/bar/bar-menu.html
+++ b/demo/bar/bar-menu.html
@@ -1,4 +1,5 @@
-<div id="bar-menu" class="menu-controls" ng-show="currentMenu == 'bar'">
+<div id="bar-menu" class="menu-controls">
+    menuuuuuuu
     <div class="drink-container clear-both">
         <drink drink="{ 'name': 'Vodka Martini', 'strength': 2, 'class': 'fa-glass' }"></drink>
         <drink drink="{ 'name': 'Manhattan', 'strength': 2, 'class': 'fa-glass' }"></drink>
