get a react hello world rendering
* modified some gulp tasks to pull from config rather than have hard coded paths
* created a react-demo module and am building from that now rather than the angular demo

--- a/react-demo/index.html
+++ b/react-demo/index.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <div class="outer-container">
+            <div id="example"></div>
             <a href="https://github.com/brainTrain/boozybrowser" target="_blank">Fork</a>
             <h1>Boozy browser</h1>
             <span class="typin select-none float-left" id="top" >
