playing around with props/splitting things up

--- a/react-demo/index.html
+++ b/react-demo/index.html
@@ -8,8 +8,11 @@
         <link type="text/css" rel="stylesheet" href="/css/boozybrowser.css">
     </head>
     <body>
+        <h1>React Stuffs</h1>
+            <div id="react-app"></div>
+        <h1>/React Stuffs</h1>
+
         <div class="outer-container">
-            <div id="example"></div>
             <a href="https://github.com/brainTrain/boozybrowser" target="_blank">Fork</a>
             <h1>Boozy browser</h1>
             <span class="typin select-none float-left" id="top" >
